# kmOS

./: .gitignore  CMakeLists.txt  Makefile  README.md  test_vmm.sh
.github/workflows/: ci.yml  nightly.yml
integration_tests/: qemu_integration_test.sh  test_kernel_functionality.sh
iso/boot/grub/: grub.cfg
kernel/: config.h
kernel/core/: api.h  api_posix.cc  os.h
kernel/runtime/: alloc.h  buffer.cc  buffer.hpp  cxx.cc  itoa.cc  keyboard_map.txt  libc.h  list.h  memory.cc  string.cc  string.cpp  string.hpp  types.h
scripts/: boot.sh  build-iso-docker.sh  build-iso-linux.sh  build-iso-macos.sh  build-iso.sh  test-iso.sh
src/: Makefile
src/kernel/: Makefile  config.h
src/kernel/arch/x86/: Makefile  alloc.cc  architecture.cc  architecture.h  archprocess.h  ata.cc  ata.h  io.h  (+24 more)
src/kernel/core/: Makefile  api.h  api_posix.cc  block_device.cc  block_device.h  boot.h  class.cc  device.cc  device.h  elf_loader.cc  elf_loader.h  env.cc  env.h  ext2.cc  ext2.h  file.cc  file.h  filesystem.cc  filesystem.h  filesystem_driver.h  kernel.h  keyboard.h  main.cc  modulelink.cc  modulelink.h  os.h  process.cc  process.h  shell.cc  shell.h  signal.h  socket.cc  socket.h  syscalls.cc  syscalls.h  system.cc  system.h  user.cc  user.h
src/kernel/modules/: Makefile
src/kernel/runtime/: Makefile  alloc.h  buddy.cc  buddy.h  buffer.cc  buffer.h  cxx.cc  divdi3.cc  itoa.cc  list.h  memory.cc  os.h  slab.cc  slab.h  slob.cc  slob.h  slub.cc  slub.h  stack.cc  stack.h  string.cc  types.h  unified_alloc.cc  unified_alloc.h
src/sdk/: Makefile  qemu.sh
src/userland/: Makefile
(+13 files in other folders)
